expanded.rs

extern "C" {
    pub fn janet_ev_send_buffer(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        flags: ::libc::c_int,
    );
}
extern "C" {
    pub fn janet_ev_send_string(
        stream: *mut JanetStream,
        str_: JanetString,
        flags: ::libc::c_int,
    );
}
extern "C" {
    pub fn janet_ev_sendto_buffer(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        dest: *mut ::libc::c_void,
        flags: ::libc::c_int,
    );
}
extern "C" {
    pub fn janet_ev_sendto_string(
        stream: *mut JanetStream,
        str_: JanetString,
        dest: *mut ::libc::c_void,
        flags: ::libc::c_int,
    );
}
extern "C" {
    pub static janet_parser_type: JanetAbstractType;
}
extern "C" {
    pub fn janet_parser_init(parser: *mut JanetParser);
}
extern "C" {
    pub fn janet_parser_deinit(parser: *mut JanetParser);
}
extern "C" {
    pub fn janet_parser_consume(parser: *mut JanetParser, c: u8);
}
extern "C" {
    pub fn janet_parser_status(parser: *mut JanetParser) -> JanetParserStatus;
}
extern "C" {
    pub fn janet_parser_produce(parser: *mut JanetParser) -> Janet;
}
extern "C" {
    pub fn janet_parser_produce_wrapped(parser: *mut JanetParser) -> Janet;
}
extern "C" {
    pub fn janet_parser_error(parser: *mut JanetParser) -> *const ::libc::c_char;
}
extern "C" {
    pub fn janet_parser_flush(parser: *mut JanetParser);
}
extern "C" {
    pub fn janet_parser_eof(parser: *mut JanetParser);
}
extern "C" {
    pub fn janet_parser_has_more(parser: *mut JanetParser) -> ::libc::c_int;
}
pub const JanetAssembleStatus_JANET_ASSEMBLE_OK: JanetAssembleStatus = 0;
pub const JanetAssembleStatus_JANET_ASSEMBLE_ERROR: JanetAssembleStatus = 1;
pub type JanetAssembleStatus = ::libc::c_uint;
#[repr(C)]
pub struct JanetAssembleResult {
    pub funcdef: *mut JanetFuncDef,
    pub error: JanetString,
    pub status: JanetAssembleStatus,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetAssembleResult {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field3_finish(
            f,
            "JanetAssembleResult",
            "funcdef",
            &&self.funcdef,
            "error",
            &&self.error,
            "status",
            &&self.status,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetAssembleResult {}
#[automatically_derived]
impl ::core::clone::Clone for JanetAssembleResult {
    #[inline]
    fn clone(&self) -> JanetAssembleResult {
        let _: ::core::clone::AssertParamIsClone<*mut JanetFuncDef>;
        let _: ::core::clone::AssertParamIsClone<JanetString>;
        let _: ::core::clone::AssertParamIsClone<JanetAssembleStatus>;
        *self
    }
}
extern "C" {
    pub fn janet_asm(source: Janet, flags: ::libc::c_int) -> JanetAssembleResult;
}
extern "C" {
    pub fn janet_disasm(def: *mut JanetFuncDef) -> Janet;
}
extern "C" {
    pub fn janet_asm_decode_instruction(instr: u32) -> Janet;
}
pub const JanetCompileStatus_JANET_COMPILE_OK: JanetCompileStatus = 0;
pub const JanetCompileStatus_JANET_COMPILE_ERROR: JanetCompileStatus = 1;
pub type JanetCompileStatus = ::libc::c_uint;
#[repr(C)]
pub struct JanetCompileResult {
    pub funcdef: *mut JanetFuncDef,
    pub error: JanetString,
    pub macrofiber: *mut JanetFiber,
    pub error_mapping: JanetSourceMapping,
    pub status: JanetCompileStatus,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetCompileResult {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field5_finish(
            f,
            "JanetCompileResult",
            "funcdef",
            &&self.funcdef,
            "error",
            &&self.error,
            "macrofiber",
            &&self.macrofiber,
            "error_mapping",
            &&self.error_mapping,
            "status",
            &&self.status,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetCompileResult {}
#[automatically_derived]
impl ::core::clone::Clone for JanetCompileResult {
    #[inline]
    fn clone(&self) -> JanetCompileResult {
        let _: ::core::clone::AssertParamIsClone<*mut JanetFuncDef>;
        let _: ::core::clone::AssertParamIsClone<JanetString>;
        let _: ::core::clone::AssertParamIsClone<*mut JanetFiber>;
        let _: ::core::clone::AssertParamIsClone<JanetSourceMapping>;
        let _: ::core::clone::AssertParamIsClone<JanetCompileStatus>;
        *self
    }
}
extern "C" {
    pub fn janet_compile(
        source: Janet,
        env: *mut JanetTable,
        where_: JanetString,
    ) -> JanetCompileResult;
}
extern "C" {
    pub fn janet_compile_lint(
        source: Janet,
        env: *mut JanetTable,
        where_: JanetString,
        lints: *mut JanetArray,
    ) -> JanetCompileResult;
}
extern "C" {
    pub fn janet_core_env(replacements: *mut JanetTable) -> *mut JanetTable;
}
extern "C" {
    pub fn janet_core_lookup_table(replacements: *mut JanetTable) -> *mut JanetTable;
}
extern "C" {
    pub fn janet_dobytes(
        env: *mut JanetTable,
        bytes: *const u8,
        len: i32,
        sourcePath: *const ::libc::c_char,
        out: *mut Janet,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_dostring(
        env: *mut JanetTable,
        str_: *const ::libc::c_char,
        sourcePath: *const ::libc::c_char,
        out: *mut Janet,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_loop_fiber(fiber: *mut JanetFiber) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_scan_number(str_: *const u8, len: i32, out: *mut f64) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_scan_number_base(
        str_: *const u8,
        len: i32,
        base: i32,
        out: *mut f64,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_scan_int64(str_: *const u8, len: i32, out: *mut i64) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_scan_uint64(str_: *const u8, len: i32, out: *mut u64) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_debug_break(def: *mut JanetFuncDef, pc: i32);
}
extern "C" {
    pub fn janet_debug_unbreak(def: *mut JanetFuncDef, pc: i32);
}
extern "C" {
    pub fn janet_debug_find(
        def_out: *mut *mut JanetFuncDef,
        pc_out: *mut i32,
        source: JanetString,
        line: i32,
        column: i32,
    );
}
extern "C" {
    pub static janet_rng_type: JanetAbstractType;
}
extern "C" {
    pub fn janet_default_rng() -> *mut JanetRNG;
}
extern "C" {
    pub fn janet_rng_seed(rng: *mut JanetRNG, seed: u32);
}
extern "C" {
    pub fn janet_rng_longseed(rng: *mut JanetRNG, bytes: *const u8, len: i32);
}
extern "C" {
    pub fn janet_rng_u32(rng: *mut JanetRNG) -> u32;
}
extern "C" {
    pub fn janet_rng_double(rng: *mut JanetRNG) -> f64;
}
extern "C" {
    pub fn janet_array(capacity: i32) -> *mut JanetArray;
}
extern "C" {
    pub fn janet_array_n(elements: *const Janet, n: i32) -> *mut JanetArray;
}
extern "C" {
    pub fn janet_array_ensure(array: *mut JanetArray, capacity: i32, growth: i32);
}
extern "C" {
    pub fn janet_array_setcount(array: *mut JanetArray, count: i32);
}
extern "C" {
    pub fn janet_array_push(array: *mut JanetArray, x: Janet);
}
extern "C" {
    pub fn janet_array_pop(array: *mut JanetArray) -> Janet;
}
extern "C" {
    pub fn janet_array_peek(array: *mut JanetArray) -> Janet;
}
extern "C" {
    pub fn janet_buffer(capacity: i32) -> *mut JanetBuffer;
}
extern "C" {
    pub fn janet_buffer_init(
        buffer: *mut JanetBuffer,
        capacity: i32,
    ) -> *mut JanetBuffer;
}
extern "C" {
    pub fn janet_buffer_deinit(buffer: *mut JanetBuffer);
}
extern "C" {
    pub fn janet_buffer_ensure(buffer: *mut JanetBuffer, capacity: i32, growth: i32);
}
extern "C" {
    pub fn janet_buffer_setcount(buffer: *mut JanetBuffer, count: i32);
}
extern "C" {
    pub fn janet_buffer_extra(buffer: *mut JanetBuffer, n: i32);
}
extern "C" {
    pub fn janet_buffer_push_bytes(
        buffer: *mut JanetBuffer,
        string: *const u8,
        len: i32,
    );
}
extern "C" {
    pub fn janet_buffer_push_string(buffer: *mut JanetBuffer, string: JanetString);
}
extern "C" {
    pub fn janet_buffer_push_cstring(
        buffer: *mut JanetBuffer,
        cstring: *const ::libc::c_char,
    );
}
extern "C" {
    pub fn janet_buffer_push_u8(buffer: *mut JanetBuffer, x: u8);
}
extern "C" {
    pub fn janet_buffer_push_u16(buffer: *mut JanetBuffer, x: u16);
}
extern "C" {
    pub fn janet_buffer_push_u32(buffer: *mut JanetBuffer, x: u32);
}
extern "C" {
    pub fn janet_buffer_push_u64(buffer: *mut JanetBuffer, x: u64);
}
extern "C" {
    pub fn janet_tuple_begin(length: i32) -> *mut Janet;
}
extern "C" {
    pub fn janet_tuple_end(tuple: *mut Janet) -> JanetTuple;
}
extern "C" {
    pub fn janet_tuple_n(values: *const Janet, n: i32) -> JanetTuple;
}
extern "C" {
    pub fn janet_string_begin(length: i32) -> *mut u8;
}
extern "C" {
    pub fn janet_string_end(str_: *mut u8) -> JanetString;
}
extern "C" {
    pub fn janet_string(buf: *const u8, len: i32) -> JanetString;
}
extern "C" {
    pub fn janet_cstring(cstring: *const ::libc::c_char) -> JanetString;
}
extern "C" {
    pub fn janet_string_compare(lhs: JanetString, rhs: JanetString) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_string_equal(lhs: JanetString, rhs: JanetString) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_string_equalconst(
        lhs: JanetString,
        rhs: *const u8,
        rlen: i32,
        rhash: i32,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_description(x: Janet) -> JanetString;
}
extern "C" {
    pub fn janet_to_string(x: Janet) -> JanetString;
}
extern "C" {
    pub fn janet_to_string_b(buffer: *mut JanetBuffer, x: Janet);
}
extern "C" {
    pub fn janet_description_b(buffer: *mut JanetBuffer, x: Janet);
}
extern "C" {
    pub fn janet_formatc(format: *const ::libc::c_char, ...) -> JanetString;
}
extern "C" {
    pub fn janet_formatb(
        bufp: *mut JanetBuffer,
        format: *const ::libc::c_char,
        ...
    ) -> *mut JanetBuffer;
}
extern "C" {
    pub fn janet_formatbv(
        bufp: *mut JanetBuffer,
        format: *const ::libc::c_char,
        args: va_list,
    );
}
extern "C" {
    pub fn janet_symbol(str_: *const u8, len: i32) -> JanetSymbol;
}
extern "C" {
    pub fn janet_csymbol(str_: *const ::libc::c_char) -> JanetSymbol;
}
extern "C" {
    pub fn janet_symbol_gen() -> JanetSymbol;
}
extern "C" {
    pub fn janet_struct_begin(count: i32) -> *mut JanetKV;
}
extern "C" {
    pub fn janet_struct_put(st: *mut JanetKV, key: Janet, value: Janet);
}
extern "C" {
    pub fn janet_struct_end(st: *mut JanetKV) -> JanetStruct;
}
extern "C" {
    pub fn janet_struct_get(st: JanetStruct, key: Janet) -> Janet;
}
extern "C" {
    pub fn janet_struct_rawget(st: JanetStruct, key: Janet) -> Janet;
}
extern "C" {
    pub fn janet_struct_get_ex(
        st: JanetStruct,
        key: Janet,
        which: *mut JanetStruct,
    ) -> Janet;
}
extern "C" {
    pub fn janet_struct_to_table(st: JanetStruct) -> *mut JanetTable;
}
extern "C" {
    pub fn janet_struct_find(st: JanetStruct, key: Janet) -> *const JanetKV;
}
extern "C" {
    pub fn janet_table(capacity: i32) -> *mut JanetTable;
}
extern "C" {
    pub fn janet_table_init(table: *mut JanetTable, capacity: i32) -> *mut JanetTable;
}
extern "C" {
    pub fn janet_table_init_raw(
        table: *mut JanetTable,
        capacity: i32,
    ) -> *mut JanetTable;
}
extern "C" {
    pub fn janet_table_deinit(table: *mut JanetTable);
}
extern "C" {
    pub fn janet_table_get(t: *mut JanetTable, key: Janet) -> Janet;
}
extern "C" {
    pub fn janet_table_get_ex(
        t: *mut JanetTable,
        key: Janet,
        which: *mut *mut JanetTable,
    ) -> Janet;
}
extern "C" {
    pub fn janet_table_rawget(t: *mut JanetTable, key: Janet) -> Janet;
}
extern "C" {
    pub fn janet_table_remove(t: *mut JanetTable, key: Janet) -> Janet;
}
